--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -24,25 +24,25 @@
 /* BREAKPOINTS */
 
 @mixin breakpoint-sm {
-    @media (min-width: 576px) {
+    @media (max-width: 576px) {
         @content;
     }
 }
 
 @mixin breakpoint-md {
-    @media (min-width: 768px) {
+    @media (max-width: 768px) {
         @content;
     }
 }
 
 @mixin breakpoint-lg {
-    @media (min-width: 992px) {
+    @media (max-width: 992px) {
         @content;
     }
 }
 
 @mixin breakpoint-xl {
-    @media (min-width: 1200px) {
+    @media (max-width: 1200px) {
         @content;
     }
 }
