--- a/sass/app.scss
+++ b/sass/app.scss
@@ -10,7 +10,9 @@
 
 // Import component styles
 @import 'components/_buttons.scss';
+@import 'components/_spacer.scss';
 @import 'components/_custom-logo.scss';
+@import 'components/_loader.scss';
 @import 'components/_forms.scss';
 
 // Import layout styles
