--- a/sass/app.scss
+++ b/sass/app.scss
@@ -18,6 +18,9 @@
 // Import layout styles
 @import 'layout/_header.scss';
 @import 'layout/_page.scss';
+@import 'layout/_section1.scss';
+@import 'layout/_section2.scss';
+@import 'layout/_section3.scss';
 @import 'layout/_footer.scss';
 
 // Import page-specific styles
