--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -4,6 +4,19 @@
     height: 100vh;
     background: #f3f3f3; /* Background color for the loader */
     z-index: 1000;
+    transition: width .1s ease-in-out;
+    h3{
+       font-size: 6rem;
+       font-weight: 100;
+       position: absolute;
+       top: 50%;
+       left: 50%;
+       transform: translate(-50%,-50%);
+       transition: width 1s ease-in-out;
+       @include breakpoint-sm{
+        font-size: 4rem;
+       }
+    }
 }
 
 #loader-bar {
@@ -14,4 +27,5 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    transition: width 5s ease-in-out;
 }
