--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,6 +4,7 @@
 
 
 header{
+    z-index: 10000 !important;
 	width: 100%;
 	height: 70px;
 	position: fixed;
@@ -16,15 +17,72 @@ header{
 	transition: border-bottom 0.5s ease-in-out; /* Apply the transition property to the header */
     .header-content{
         width: 1200px;
+        padding: 0rem 6rem !important;
+        z-index: 999999 !important;
         display: flex;
         justify-content: space-between;
         align-items: center;
-    }
-    .primary-menu{
-        a{
-            &:not(:last-child) {
-                margin-right: 2.7rem;
+        position: relative;
+        @include breakpoint-md {
+            padding: 0rem 4rem !important;
+        }
+        @include breakpoint-sm {
+            padding: 0rem 1.5rem !important;
+        }
+        .ham{
+            display: none;
+            @include breakpoint-md {
+                display: block;
+                position: relative;
+                svg{
+                    transition: opacity .1s ease-in-out;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%,-50%);
+                }
             }
         }
     }
+    .primary-menu{
+        @include breakpoint-md {
+            position: fixed;
+            top: 71px;
+            background-color: #fff;
+            width: 100%;
+            left: -100%;
+            z-index: 10;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: calc(100vh - 71px);
+            transition: left .3s ease-in-out;
+        }
+        a{
+            @include breakpoint-md{
+                font-size: 3.2rem;
+            }
+            @include breakpoint-sm {
+               font-size: 2.7rem;
+            }
+            &:not(:last-child) {
+                margin-right: 2.7rem;
+                @include breakpoint-md {
+                    margin-right: 0;
+                }
+                
+            }
+        }
+    }
+}
+
+.active{
+    left: 0 !important;
+}
+.appear{
+    opacity: 1;
+}
+.disappear{
+    opacity: 1;
 }
